--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 /* Navbar Profile Image Animation */
-.navProfileImg {
+#navProfileImg {
     opacity: 0;
     transform: scale(0);
     transition: all 0.7s cubic-bezier(.68,-0.55,.27,1.55);
